--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
    <h2>RESUME</h2>
-   <img src="image/pp.jpg" alt="image"
+   <img src="pp.jpg" alt="image"
     style="width: 100px; height: 100px; margin:-40 10 -100 400 ;
     border: 10px;">
 <p>
