--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <p>
     <h3>HARSH SAH</h3> <br>
     Near New Court Jamtara <br>
-    Jharkhand <br> PIN-815351 <br>
+    Jharkhand <br> PIN-XXXXXX <br>
     Contact Number-7XXXXXXX59 <br>
     Email Id -- SXXXXXX87@gmail.com  <br>
     <hr width="auto">
