--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h3>HARSH SAH</h3> <br>
     Near New Court Jamtara <br>
     Jharkhand <br> PIN-700056 <br>
-    Contact Number-7XXXXXXX59 <br>
+    Contact Number-7XXXXXXX5933333322 <br>
     Email Id -- SXXXXXX87@gmail.com  <br>
     <hr width="auto">
     <b>PERSONAL DATA</b>
