--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h3>HARSH SAH</h3> <br>
     Near New Court Jamtara <br>
     Jharkhand <br> PIN-700056 <br>
-    Contact Number-7XXXXXXX5933333322 <br>
+    Contact Number-7XXXXXXX59 <br>
     Email Id -- SXXXXXX87@gmail.com  <br>
     <hr width="auto">
     <b>PERSONAL DATA</b>
@@ -63,6 +63,17 @@
         Batch-- 2006-2016 <br>
     </div>    
     </P>
+    <form>
+        <!-- text boxes -->
+        <input type="text" name="email" id="ff">
+        <input type="password" name="Name" id="ff"> <br>
+        <!-- radio -->
+        <input type="radio" name="gender" value="male"> Male
+        <input type="radio" name="gender" value="female">Female
+        <input type="radio" name="gender" value="other"> other <br>
+
+        <input type="submit" name="submit" value="submit">
+    </form>
 
 </p>   
 </ol>
